--- a/server/public/index.html
+++ b/server/public/index.html
@@ -9,6 +9,6 @@
     <title>Server Side Calculator</title>
 </head>
 <body>
-    <h1>Jquery Server Side Calculator</h1>
+    <h1>Server Side Calculator</h1>
 </body>
 </html>
