--- a/server/public/index.html
+++ b/server/public/index.html
@@ -10,5 +10,15 @@
 </head>
 <body>
     <h1>Server Side Calculator</h1>
+    <input type="number" id="inputOne" />
+    <button id="plusBtn">+</button>
+    <button id="minusBtn">-</button>
+    <button id="timesBtn">*</button>
+    <button id="divBtn">/</button>
+    <input type="number" id="inputTwo" />
+    <button id="equalsBtn">=</button>
+    <button id="clearBtn">C</button>
+    <h3 id="domResult"></h3>
+    <ul id="historyList"></ul>
 </body>
 </html>
