--- a/server/public/index.html
+++ b/server/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./stylesheets/bootstrap.css">
+    <link rel="stylesheet" href="./vendors/bootstrap.css">
     <link rel="stylesheet" href="./stylesheets/style.css">
     <script src="./vendors/jquery-3.5.1.js"></script>
     <script src="./scripts/client.js"></script>
